@@ -41,52 +41,11 @@ public class TestingServiceImpl implements TestingService {
 
     @Override
     public void test(SubmissionForm submissionForm, Problem problem, User user) {
-        /*
-        Date time = new Date();
-        if (time.after(problem.getContest().getFinishTime()) || time.before(problem.getContest().getStartTime()))
-            throw new NotFoundException();
-        Submission submission = Submission.builder()
-                .submissionTime(time)
-                .language(languageRepository.findLanguageByName(submissionForm.getLanguageName()).orElseThrow(NotFoundException::new))
-                .owner(user)
-                .pathToProgram(user.getLogin() + " " + new SimpleDateFormat().format(time))
-                .state(SubmissionState.Q)
-                .problem(problem).build();
-        submissionRepository.saveAndFlush(submission);
-        File dir = new File(submission.getPathToProgram());
-        dir.mkdir();
-        File program = new File(dir, submission.getLanguage().getProgramName());
-        try (BufferedWriter writer = new BufferedWriter(new FileWriter(program))) {
-            writer.write(submissionForm.getProgram());
-        } catch (IOException ignored) {
-        }
-        if (submission.getLanguage().getCompilationCommand() != null) {
-            try {
-                Process p = Runtime.getRuntime().exec(submission.getLanguage().getCompilationCommand(), null, dir);
-            } catch (IOException e) {
-                e.printStackTrace();
-            }
-        }
-        File toExe = new File(dir, submission.getLanguage().getCompiledFileName());
-        if (!toExe.exists()) {
-            submission.setState(SubmissionState.CE);
-            submissionRepository.saveAndFlush(submission);
-            return;
-        }
-        submission.setState(SubmissionState.T);
-        try {
-            Process testing = Runtime.getRuntime().exec(submission.getLanguage().getCompilationCommand(), null, dir);
-            if (!testing.waitFor(submission.getProblem().getTimeLimit(),TimeUnit.SECONDS)) {
-
-            }
-        } catch (IOException | InterruptedException e) {
-            e.printStackTrace();
-        }
-        */
         Date time = new Date();
         MultipartFile source = submissionForm.getProgram();
-        if (time.after(problem.getContest().getFinishTime()) || time.before(problem.getContest().getStartTime()))
+        /*if (time.after(problem.getContest().getFinishTime()) || time.before(problem.getContest().getStartTime()))
             throw new NotFoundException();
+        */
         SubmissionState state = SubmissionState.Q;
 
         Submission submission = Submission.builder()
@@ -113,17 +72,13 @@ public class TestingServiceImpl implements TestingService {
         String exeFileName = "Main";
         String compileLog = "";
         String sep = File.separator;
-
-        File sub = new File(root, "submissions");
-        if (!sub.exists())
-            if (!sub.mkdirs())
-                System.out.println("No");
-
+        String os = System.getProperty("os.name").toLowerCase();
         //компиляция
         try {
             source.transferTo(new File(dir.getAbsolutePath() + sep + "Main" + submission.getLanguage().getExtension()));
             if (submission.getLanguage().getName().equals("GNU G++ 14")) {
-                ProcessBuilder pb = new ProcessBuilder("g++", "-Wall", "-o", "Main", "Main.cpp");
+                ProcessBuilder pb = new ProcessBuilder("g++", "-Wall", "-o", "Main.exe", "Main.cpp");
+                exeFileName = "Main.exe";
                 pb.redirectErrorStream(true);
                 pb.directory(dir);
                 Process p = pb.start();
@@ -147,7 +102,9 @@ public class TestingServiceImpl implements TestingService {
                 exeFileName = "Main.java";
             }
             if (submission.getLanguage().getName().equals("Python 3.7")) {
-                fourArg = "python3 ";
+                if (os.equals("windows 10"))
+                    fourArg = "";
+                else fourArg = "python3 ";
                 exeFileName = "Main.py";
             }
             if (submission.getLanguage().getName().equals("PascalABC.NET")) {
@@ -196,22 +153,38 @@ public class TestingServiceImpl implements TestingService {
 
             for (File ignored : Objects.requireNonNull(input.listFiles())) {
                 Files.copy(Paths.get(input + sep + "input" + i + ".txt"), new File(dir, "input" + i + ".txt").toPath());
-                ProcessBuilder pb = new ProcessBuilder("./script.sh", String.valueOf(time.getTime()), String.valueOf(i), fourArg, exeFileName);
+
+                Runtime.getRuntime().exec("Main.exe", null, new File(root + sep + dir));
+
+
+
+                ProcessBuilder pb;
+                if (!os.equals("windows 10"))
+                    pb = new ProcessBuilder("./script.sh", String.valueOf(time.getTime()), String.valueOf(i), fourArg, exeFileName);
+                else
+                    pb = new ProcessBuilder(root + sep + "submissions" + sep + time.getTime() + sep + exeFileName + "<" + root + sep + "submissions" + sep + time.getTime() + sep + "input" + i + ".txt" + ">" + root + sep + "submissions" + sep + time.getTime() + sep + "output" + sep + "output" + i + ".txt");
+
                 pb.redirectErrorStream(true);
                 Process p = pb.start();
-                Thread.sleep(problem.getTimeLimit() * 1000);
-                if (p.isAlive()) {
+                //Thread.sleep(problem.getTimeLimit() * 1000);
+                /*if (p.isAlive()) {
                     submission.setState(SubmissionState.TL);
                     submission.setLastTest(i);
                     submissionRepository.save(submission);
                     return;
-                }
+                }*/
+                System.out.println(pb.command());
+                while (p.isAlive())
+                    Thread.sleep(100L);
                 ByteArrayOutputStream error = new ByteArrayOutputStream();
                 IOUtils.copy(p.getInputStream(), error);
                 if (!error.toString().equals("")) {
                     submission.setLastTest(i);
                     submission.setState(SubmissionState.RE);
-                    submission.setLog(error.toString());
+                    if (error.toString().length() > 250)
+                        submission.setLog(error.toString().substring(250));
+                    else submission.setLog(error.toString());
+                    System.out.println(error);
                     submissionRepository.save(submission);
                     return;
                 }
